[FIX] - text-align

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -29,7 +29,7 @@ a {
 }
 
 .section-header {
-    align-self: var(--section-header-align);
+    text-align: var(--section-header-align);
 }
 
 :root {
